# ai-maintenance-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: app-managed-credentials.md  application-api.md  architecture.md  containerisation.md  conversation-history.md  document-ingestion.md  embeddings-and-vector-search.md  grounded-answers.md  guided-diagnostics.md  indexed-vector-storage.md  manual-lifecycle.md  performance-and-caching.md  retrieval-evaluation.md  retrieval-reranking.md  testing.md  visual-document-understanding.md  web-interface.md
evals/: retrieval-cases.json
evals/corpus/: air-compressor.md  belt-conveyor.md  centrifugal-pump.md
src/maintenance_assistant/: __init__.py  answering.py  cli.py  config.py  conversations.py  credentials.py  diagnostic_planner.py  diagnostics.py  embeddings.py  jobs.py  metrics.py  ocr.py  reranking.py  retrieval.py  vector_index.py  vision.py  worker.py
src/maintenance_assistant/api/: __init__.py  __main__.py  app.py  errors.py  routes.py  schemas.py  services.py
src/maintenance_assistant/evaluation/: __init__.py  retrieval.py
tests/: fakes.py  test_answer_provider.py  test_answering.py  test_ci_configuration.py  test_cli.py  test_config.py  test_conversations.py  test_credentials.py  test_diagnostic_planner.py  test_diagnostics.py  test_embeddings.py  test_jobs.py  test_ocr.py  test_reranking.py  test_retrieval.py  test_retrieval_evaluation.py  test_vector_index.py  test_vision.py
tests/api/: __init__.py  test_app.py
tests/container/: __init__.py  test_compose.py
tests/ingestion/: __init__.py  pdf_factory.py  test_chunking.py  test_extractors.py  test_normalisation.py  test_service.py  test_storage.py  test_validation.py
web/: Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+30 files in other folders)
