[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-maintenance-assistant"
version = "0.1.0"
description = "A local-first assistant for maintenance knowledge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["maintenance_assistant"]

[tool.coverage.report]
show_missing = true
skip_covered = true
