[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-maintenance-assistant"
version = "0.1.0"
description = "A local-first assistant for maintenance knowledge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "openai>=2,<3",
    "pypdf>=5.7,<7",
    "python-multipart>=0.0.20,<1",
    "tiktoken>=0.9,<1",
    "uvicorn>=0.34,<1",
]

[project.scripts]
ama-ingest = "maintenance_assistant.cli:main"
ama-api = "maintenance_assistant.api.__main__:main"
ama-search = "maintenance_assistant.cli:search_main"
ama-evaluate-retrieval = "maintenance_assistant.cli:evaluation_main"

[project.optional-dependencies]
test = [
    "httpx2>=2,<3",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
markers = [
    "container: requires a running local Docker daemon",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["maintenance_assistant"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.setuptools.package-data]
maintenance_assistant = ["assets/*.tiktoken"]
